* Fri Mar 21 2003 Philip
- Don't dereference yd after it has been freed

* Fri Mar 21 2003 Mik
- Clean up webcam data when yahoo data is cleaned up
- Added connection type to webcam
- Removed static for callbacks in sample_client

* Wed Mar 19 2003 Mik
- Added perliminary webcam upload support
- Added descriptions for the webcam functions

* Tue Mar 18 2003 Wayne Parrott
- Added preliminary yahoo chat support

* Sun Mar 16 2003 Philip
- Fixed double deletion problem with yab
- Fixed memory leak with non-pager connections

* Fri Mar 14 2003 Philip
- Announce login success earlier

* Thu Mar 13 2003 Mik
- Add preliminary webcam support

* Thu Mar 6 2003 Philip
- Remove requests for unnecessary data in addressbook code

* Tue Mar 4 2003 Philip
- Fix read past end of string in yahoo_getyab

* Wed Feb 19 2003 Philip (version 0.6.3)
- Make dist depend on libyahoo2.spec and libyahoo2.pc
- Change version number to 0.6.3

* Thu Feb 13 2003 Philip
- added check for null connection when reading from socket.
thanks to Alan Humpherys

* Thu Feb 6 2003 Philip
- renamed yahoo_add_yab to yahoo_set_yab

* Wed Feb 5 2003 Philip
- Support for modifying an address book entry

* Mon Jan 27 2003 Philip
- Support for adding address book entry on the server

* Thu Jan 24 2003 Philip
- Download address book from server and fill in real_name field
of yahoo_buddy

* Tue Jan 21 2003 Philip
- Added CHAT service codes from yach
- Fixed the problem with Offline UTF-8 encoded messages
it no longer sends an extra bell
- Implemented group renaming

* Sat Jan 18 2003 Philip
- utf-8 encoding/decoding functions are in yahoo_util
- detect whether it is utf-8 or not from utf-8 flag in message

* Wed Jan 15 2003 Philip
- added utf-8 decode to conference messages too.  I need to move this into
a separate function

* Tue Jan 14 2003 Philip
- changed the accent character hack to proper UTF-8 decode supplied by Alan

* Mon Jan 13 2003 Philip Tellis
- sample client handles accented characters correctly.
