@@ -111,7 +111,7 @@ void yahoo_webcam_get_upload_server(int id);
 /* my_ip should be filled with your own ip, even if it's a private ip */
 /* direction should be set to YAHOO_WEBCAM_DOWNLOAD or YAHOO_WEBCAM_UPLOAD */
 /* conn_type should be one of the following 0=Dialup, 1=DSL/Cable, 2=T1/Lan */
-void yahoo_webcam_connect(int id, struct webcam *wcm);
+void yahoo_webcam_connect(int id, struct yahoo_webcam *wcm);
 
 /* sends an image when uploading */
 /* image points to a JPEG-2000 image, lenght is the length of the image */
