@@ -1,3 +1,7 @@
+* Mon Mar 24 2003 Mik
+- Seperate webcam struct to public and private data
+- Rename webcam struct to yahoo_webcam
+
 * Fri Mar 21 2003 Philip
 - Don't dereference yd after it has been freed
 
